fixed z-index on viewer

--- a/src/components/Viewer/Viewer.module.css
+++ b/src/components/Viewer/Viewer.module.css
@@ -11,22 +11,15 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 .arrow {
-    flex-basis: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 410;
+    margin: 3vw;
 }
 
 .image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-basis: 80%;
     z-index: 410;
 }
